--- a/interfaces/web/public/index.html
+++ b/interfaces/web/public/index.html
@@ -4,6 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ensu</title>
+  <meta name="description" content="Run LLMs locally in your browser. 100% private, on-device AI chat powered by WebGPU.">
+  
+  <!-- Open Graph / Social Preview -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://ensu.ente.io/">
+  <meta property="og:title" content="ensu - Private AI Chat">
+  <meta property="og:description" content="Run LLMs locally in your browser. 100% private, on-device AI chat powered by WebGPU.">
+  <meta property="og:image" content="https://ensu.ente.io/social-preview.png">
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://ensu.ente.io/">
+  <meta name="twitter:title" content="ensu - Private AI Chat">
+  <meta name="twitter:description" content="Run LLMs locally in your browser. 100% private, on-device AI chat powered by WebGPU.">
+  <meta name="twitter:image" content="https://ensu.ente.io/social-preview.png">
+  
   <link rel="icon" type="image/png" href="/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&family=Source+Serif+Pro:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/styles.css">
