--- a/interfaces/web/public/index.html
+++ b/interfaces/web/public/index.html
@@ -22,6 +22,7 @@
   
   <link rel="icon" type="image/png" href="/favicon.png">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&family=Source+Serif+Pro:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/gilroy-font@1.1.0/font/gilroy.css" rel="stylesheet">
   <link rel="stylesheet" href="/styles.css">
   <!-- Markdown parser + sanitizer -->
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
