Fix model loading cancellation and update ente.io UTM source

--- a/interfaces/web/public/index.html
+++ b/interfaces/web/public/index.html
@@ -33,7 +33,7 @@
 <body>
   <div class="container">
     <header class="masthead">
-      <a href="https://ente.io/?ref=ensu" target="_blank" class="logo-link">
+      <a href="https://ente.io/?utm_source=ensu" target="_blank" class="logo-link">
         <h1>ensu</h1>
         <span class="by-ente">a toy by ente</span>
       </a>
