--- a/interfaces/web/public/index.html
+++ b/interfaces/web/public/index.html
@@ -35,7 +35,7 @@
     <header class="masthead">
       <a href="https://ente.io/?utm_source=ensu" target="_blank" class="logo-link">
         <h1>ensu</h1>
-        <span class="by-ente">a toy by ente</span>
+        <span class="by-ente">a toy by <span class="ente-brand">ente</span></span>
       </a>
       <div class="masthead-controls">
         <button class="picker-btn" id="sessionBtn">New Chat</button>
