Add multi-line input support with auto-resize textarea

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="input-wrap">
       <div class="image-preview" id="imagePreview"></div>
       <div class="input-row">
-        <input type="text" id="input" placeholder="Compose your message..." autocomplete="off">
+        <textarea id="input" placeholder="Compose your message..." autocomplete="off" rows="1"></textarea>
         <button class="attach-btn" id="uploadBtn" type="button" title="Attach image">
           <i data-lucide="image-plus"></i>
         </button>
